--- a/package.json
+++ b/package.json
@@ -1,28 +1,17 @@
 {
-  "name": "chess.js",
-  "version": "0.9.1",
-  "description": "A Javascript chess library for chess move generation/validation, piece placement/movement, and check/checkmate/draw detection",
-  "author": "Jeff Hlywa <jhlywa@gmail.com> (https://github.com/jhlywa)",
-  "license": "BSD-2-Clause",
-  "keywords": [
-    "chess"
-  ],
-  "main": "chess.js",
+  "name": "TwitchChessBot",
+  "version": "0.0.1",
+  "description": "The brains behind http://twitch.tv/twitchchessbot",
+  "author": "Tucker Saude <tsaude@live.com> (https://github.com/tsaude)",
+  "main": "gamev2.js",
   "repository": {
     "type": "git",
-    "url": "http://github.com/jhlywa/chess.js.git"
-  },
-  "devDependencies": {
-    "mocha": "2.2.4",
-    "chai": "2.3.0",
-    "uglify-js": "2.4.21",
-    "tmi.js": "latest"
-  },
-  "scripts": {
-    "test": "./node_modules/.bin/mocha",
-    "minify": "./node_modules/.bin/uglifyjs chess.js -c -m --comments 'license' > chess.min.js"
+    "url": "http://github.com/tsaude/TCB"
   },
   "dependencies": {
-    "socket.io": "^1.3.6"
+    "tmi.js": "latest",
+    "socket.io": "latest",
+    "mysql": "latest",
+    "express": "latest"
   }
 }
